Refactor all packages to strict BCE pattern; fix 3 failing tests
- Applied BCE (Boundary-Controller-Entity) restructuring to all packages:
  useraccount, userprofile, login, logout, fracategory, fra, donee, report
- Each Boundary has exactly showPage/showSuccessMessage/showErrorMessage + use-case methods
- Each Controller has exactly 1 public method; no HTTP handling, no direct DB access
- Fixed CreateFRACategoryController: return false for blank name instead of hitting duplicate check
- Fixed UpdateFRACategoryController: skip duplicate check when name is blank
- Fixed LogoutPage: null-guard logoutController for test environments without Spring context
- All 113 tests passing

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>